warehouse/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wh-deployment
  labels:
    app: wh-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wh-deployment
  template:
    metadata:
      labels:
        app: wh-deployment
    spec:
      containers:
      - name: wh
        image: warehouse-warehouse
        imagePullPolicy: Never
        ports:
        - containerPort: 8082
      imagePullSecrets:
        - name: sales


---
apiVersion: v1
kind: Service
metadata:
  name: wh-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: 8082
  selector:
    app: wh-deployment
