warehouse/k8s/route.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: warehouse-httproute
spec:
  parentRefs:
    - name: ms-gateway
      sectionName: http
  hostnames:
    - "example.ira.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /warehouse
      backendRefs:
        - name: wh-service
          port: 5555
